--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@babel/cli": "^7.10.1",
     "@babel/core": "^7.10.2",
+    "@babel/plugin-transform-flow-strip-types": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
